--- a/index.html
+++ b/index.html
@@ -30,10 +30,16 @@
 
     <section class="testimonials">
         <h2>Wat zeggen klanten over ons</h2>
+        <div class="testimonial1">
         <p class="testimonials-customers">Al jaren klant bij Domein.shop. De service is goed en medewerkers zijn zeer klantvriendelijk. Snelle response, zelfs op momenten dat je het niet verwacht.</p>
+        <p class="customer-1">Jane Doe, Managing Director
 
+        </div>
 
-
+        <div class="testimonial2">
+        <p class="testimonials-customers2">Ik ben tevreden over Domein.shop. Met name de snelle reactie op mijn vragen en goede service maakt dat ik TransIP aan iedereen aanbeveel.</p>
+            <p class="customer2">John Smith, Frontend Developer</p>
+        </div>
 
 
     </section>
@@ -44,7 +50,7 @@
         <img class="callcenter-image" src="assets/images/callcenter.jpg" alt="image of a callcenter">
         </div>
         <p class="text-support">Je kunt 7 dagen per week bij ons terecht. Ons <a class="link-support" href="target_blank">team</a> van vakkundige medewerkers helpt je graag op weg.</p>
-        <button class="contact-button">Neem contact op</button>
+        <button  class="contact-button">Neem contact op</button>
 
 
     </section>
