added center and moved faq

--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@
 <header>
     <div class="header-section">
     <h1>Domein.shop</h1>
-    <p>Jouw domeinnaam registreren in slechts 1 minuut!</p>
+    <p class=name-registry-comment">Jouw domeinnaam registreren in slechts 1 minuut!</p>
     <form>
-       <section class="input-button">
+
+        <section>
             <input class="url-field" type="text" placeholder="Is jouw domein nog vrij?"/>
-            <button class="availabitlity-button ">Check beschikbaarheid</button>
-       </div>
-    </section>
+            <button type="button" class="availabitlity-button">Check beschikbaarheid</button>
+
+        </section>
     </form>
+    </div>
+
+
 
 
 </header>
@@ -31,14 +35,15 @@
     <section class="testimonials">
         <h2>Wat zeggen klanten over ons</h2>
         <div class="testimonial1">
-        <p class="testimonials-customers">Al jaren klant bij Domein.shop. De service is goed en medewerkers zijn zeer klantvriendelijk. Snelle response, zelfs op momenten dat je het niet verwacht.</p>
+        <p class="testimonials-customers1">Al jaren klant bij Domein.shop. De service is goed en medewerkers zijn zeer klantvriendelijk. Snelle response, zelfs op momenten dat je het niet verwacht.</p>
         <p class="customer-1">Jane Doe, Managing Director
-
+        <img class="jane-pic" src="assets/images/avatar-jane.png">
         </div>
 
         <div class="testimonial2">
         <p class="testimonials-customers2">Ik ben tevreden over Domein.shop. Met name de snelle reactie op mijn vragen en goede service maakt dat ik TransIP aan iedereen aanbeveel.</p>
             <p class="customer2">John Smith, Frontend Developer</p>
+            <img class="john-pic" src="assets/images/avatar-john.png">
         </div>
 
 
@@ -46,11 +51,11 @@
 
     <section class="support">
         <h2>Wij staan voor je klaar</h2>
-        <div>
+        <div class="callcenter-image">
         <img class="callcenter-image" src="assets/images/callcenter.jpg" alt="image of a callcenter">
         </div>
-        <p class="text-support">Je kunt 7 dagen per week bij ons terecht. Ons <a class="link-support" href="target_blank">team</a> van vakkundige medewerkers helpt je graag op weg.</p>
-        <button  class="contact-button">Neem contact op</button>
+        <p class="text-support">Je kunt 7 dagen per week bij ons terecht. Ons <a class="link-support" href="team.html">team</a> van vakkundige medewerkers helpt je graag op weg.</p>
+        <button type="button" class="contact-button">Neem contact op</button>
 
 
     </section>
@@ -64,7 +69,7 @@
                 cursor: pointer;
             }
         </style>
-
+    <div class="question-list">
         <details>
             <summary>Wat is een goede domein naam?</summary>
             Een goede domeinnaam moet aan enkele eisen voldoen. Ten eerste mag jouw domeinnaam niet in strijd zijn met de openbare orde of de goede zeden. Dit betekent dat je geen ongepaste domeinnaam mag registreren. Verder mag een domeinnaam enkel uit letters, cijfers en eventueel een liggend streepje bestaan. Andere leestekens zijn niet toegestaan.
@@ -89,7 +94,7 @@
             <summary>Is het mogelijk een domeinnaam te registreren en deze niet te gebruiken?</summary>
             Ja, je kunt een domeinnaam registreren zonder deze te gebruiken. Dit gebeurt regelmatig. Ten eerste zijn er veel ondernemers die de domeinnaam van hun nieuwe bedrijf alvast registreren, terwijl ze nog lang geen website hebben. Zij willen simpelweg zeker weten dat de domeinnaam nog beschikbaar is als hun website af is en registreren deze daarom alvast. Verstandig, zeker als je een domeinnaam wil registreren die andere mensen ook interessant kunnen vinden.
         </details>
-
+    </div>
 
     </section>
 
